# manim-agent

./: .env.example  .gitignore  .neon  .railwayignore  .watchfilesignore  AGENTS.md  Dockerfile  Makefile  README.md  _dev_backend.py  debug_incremental_test.py  debug_pipeline_style.py  debug_sdk_test.py  debug_webenv_test.py  pyproject.toml  railway.json  start.sh
backend/: __init__.py  _dev.py  cleanup_tasks.py  content_clarifier.py  delete_tasks.py  log_config.py  main.py  models.py  paths.py  pipeline_runner.py  routes.py  sse_manager.py  task_runtime.py  task_store.py
docs/: PRD.md  claude-sdk-migration-plan.md  claude-sdk-state-model.md  debug-ui-team-guide.md  generation-quality-review-and-manim-standards.md  roadmap.md
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  vitest.config.ts
migrations/: 001_initial_schema.sql  002_debug_issues.sql
scripts/: debug_incremental_test.py  debug_sdk_threaded.py  debug_webenv_test.py  run_smoke.py
tests/: _test_main_dispatcher_helpers.py  test_audio_orchestrator.py  test_backend_logging.py  test_bgm_pipeline.py  test_dispatcher.py  test_dispatcher_code_capture.py  test_dispatcher_events_stream_stderr.py  test_dispatcher_init_dispatch.py  test_dispatcher_pipeline_options.py  test_dispatcher_pipeline_output.py  test_dispatcher_pipeline_output_persistence.py  test_dispatcher_tts_narration.py  test_event_store.py  test_hooks_task_scope.py  test_layout_safety.py  test_main.py  test_main_build_options_quality.py  test_main_cli_args.py  test_main_dispatcher_pipeline.py  test_music_client.py  (+27 more)
(+138 files in other folders)
