[project]
name = "manim-agent"
version = "0.1.0"
description = "Manim video generation powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "manim>=0.20.1",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.3",
    "boto3>=1.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
